--- a/Theme/Honkai: Star Rail/HonkaiStarRail.theme.css
+++ b/Theme/Honkai: Star Rail/HonkaiStarRail.theme.css
@@ -1,1 +1,103 @@
+/**
+ * @name Honkai: Star Rail
+ * @author Chez_Zak
+ * @version 1.0.0
+ * @description Honkai: Star Rail theme for fans of the game.
+ * @source https://github.com/chezzakowo/BetterDiscord-Theme-And-Plugins/tree/main/Theme/Honkai:%20Star%20Rail
+ * @invite EkDz8vtVUU
+ */
+
+ @import url('https://raw.githubusercontent.com/chezzakowo/BetterDiscord-Theme-And-Plugins/main/ThemeCore/Honkai%3A%20Star%20Rail/Core1.css');
+ @import url('https://raw.githubusercontent.com/chezzakowo/BetterDiscord-Theme-And-Plugins/main/ThemeCore/Honkai%3A%20Star%20Rail/Core3.css');
+ 
+ :root {
+   /* Main Color */
+   --main-color: #4D67FF;
+   --main-color-two: #FF81D9;
+   --hover-color: 100,100,100;
+   
+   /* Status color */
+   --online-color: #43b581; /* online status color */
+   --idle-color: #faa61a; /* idle status color */
+   --dnd-color: #982929; /* dnd status color */
+   --streaming-color: #593695; /* streaming status color */
+   --offline-color: #808080; /* offline/invisible status color */
+  
+   /* App Background */
+   --background-shading: 100%; /* app background shading */
+   --background-overlay: rgba(0, 0, 0, 0.6); /* app background overlay color/gradient */
+   --background-image: url(https://cdn.discordapp.com/attachments/1047871997260091452/1128181960804675585/honkai-star-rail-van-se-an-khach-du-di-theo-the-loai-turn-based-265527.png); /* app background image */
+   --background-position: center; /* app background position */
+   --background-size: cover; /* app background size */
+   --background-repeat: no-repeat; /* app background repeat */
+   --background-attachment: fixed; /* app background attachment */
+   --background-brightness: 100%; /* app background brightness */
+   --background-contrast: 100%; /* app background contrast */
+   --background-saturation: 100%; /* app background saturation */
+   --background-invert: 0%; /* app background invert */
+   --background-grayscale: 0%; /* app background grayscale */
+   --background-sepia: 0%; /* app background sepia */
+   --background-blur: 0px; /* app background blur */
+   
+   /* Home Button Icon */
+   --home-icon: url(https://clearvision.gitlab.io/icons/discord.svg); /* home button icon */
+   --home-position: center; /* home button icon position */
+   --home-size: 40px; /* home button icon size */
+   
+   /* Channel Colors */
+   --channel-unread: var(--main-color); /* Unread Server channel color */
+   --channel-color: rgba(255, 255, 255, 0.3); /* Read Server channel color */
+   --channel-text-selected: #fff; /* Selected channel text color */
+   --muted-color: rgba(255, 255, 255, 0.1); /* Muted channel color */
+   
+   /* Modal Backdrop */
+   --backdrop-overlay: rgba(0, 0, 0, 0.8); /* modal backdrop overlay color/gradient */
+   --backdrop-image: var(--background-image); /* modal backdrop image */
+   --backdrop-position: var(--background-position); /* modal backdrop position */
+   --backdrop-size: var(--background-size); /* modal backdrop size */
+   --backdrop-repeat: var(--background-repeat); /* modal backdrop repeat */
+   --backdrop-attachment: var(--background-attachment); /* modal backdrop attachment */
+   --backdrop-brightness: var(--background-brightness); /* modal backdrop brightness */
+   --backdrop-contrast: var(--background-contrast); /* modal backdrop contrast */
+   --backdrop-saturation: var(--background-saturation); /* modal backdrop saturation */
+   --backdrop-invert: var(--background-invert); /* modal backdrop invert */
+   --backdrop-grayscale: var(--background-grayscale); /* modal backdrop grayscale */
+   --backdrop-sepia: var(--background-sepia); /* modal backdrop sepia */
+   --backdrop-blur: var(--background-blur); /* modal backdrop blur */
+   
+   /* User Popout Background */
+   --user-popout-image: var(--background-image); /* user popout background image */
+   --user-popout-position: var(--background-position); /* user popout background position */
+   --user-popout-size: var(--background-size); /* user popout background size */
+   --user-popout-repeat: var(--background-repeat); /* user popout background repeat */
+   --user-popout-attachment: var(--background-attachment); /* user popout background attachment */
+   --user-popout-brightness: var(--background-brightness); /* user popout background brightness */
+   --user-popout-contrast: var(--background-contrast); /* user popout background contrast */
+   --user-popout-saturation: var(--background-saturation); /* user popout background saturation */
+   --user-popout-invert: var(--background-invert); /* user popout background invert */
+   --user-popout-grayscale: var(--background-grayscale); /* user popout background grayscale */
+   --user-popout-sepia: var(--background-sepia); /* user popout background sepia */
+   --user-popout-blur: calc(var(--background-blur) + 3px); /* user popout background blur */
+   --user-popout-overlay: rgba(0, 0, 0, 0.6); /* user popout overlay color */
+   
+   /* User Modal Background */
+   --user-modal-image: var(--background-image); /* user modal background image */
+   --user-modal-position: var(--background-position); /* user modal background position */
+   --user-modal-size: var(--background-size); /* user modal background size */
+   --user-modal-repeat: var(--background-repeat); /* user modal background repeat */
+   --user-modal-attachment: var(--background-attachment); /* user modal background attachment */
+   --user-modal-brightness: var(--background-brightness); /* user modal background brightness */
+   --user-modal-contrast: var(--background-contrast); /* user modal background contrast */
+   --user-modal-saturation: var(--background-saturation); /* user modal background saturation */
+   --user-modal-invert: var(--background-invert); /* user modal background invert */
+   --user-modal-grayscale: var(--background-grayscale); /* user modal background grayscale */
+   --user-modal-sepia: var(--background-sepia); /* user modal background sepia */
+   --user-modal-blur: calc(var(--background-blur) + 3px); /* user modal background blur */
+
+  /* THEME BD COLORS */
+  --bd-blue: var(--main-color); /* betterdiscord main color [default: var(--main-color)] */
+  --bd-blue-hover: var(--hover-color); /* betterdiscord hover color [default: var(--hover-color)] */
+  --bd-blue-active: var(--hover-color); /* betterdiscord active color [default: var(--hover-color)] */
+
+}
 
